# test-repo

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: cicd.yml
my_package/: core.py
